--- a/node-mongo-compose/frontend/index.html
+++ b/node-mongo-compose/frontend/index.html
@@ -77,6 +77,7 @@
             }
 
             const saveClient = () => {
+                // a propriedade é _id por causa do mongoDB
                 const _id = $('[name=id]').val()
                 const name = $('[name=name]').val()
                 $.ajax({
